# test-rust-3

./: Cargo.toml  README.md  config.yaml
src/: main.rs
