[package]
name = "solana-geyser-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = { version = "0.9", features = ["tls"] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solana-sdk = "1.16"
solana-client = "1.16"
anyhow = "1.0"
http-body = "0.4"
bytes = "1.0"
dirs = "5.0"
yellowstone-grpc-client = "1.0"
yellowstone-grpc-proto = "1.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.9"
